# Embedded-Linux-Examples

./: .gitignore  README.md
1-Compiling-in-Linux-gcc/: .gitignore  Initialize_cmake_project.sh  REAMDE.md
1-Compiling-in-Linux-gcc/.devcontainer/: Dokerfile
1-Compiling-in-Linux-gcc/dep1/: CMakeLists.txt
1-Compiling-in-Linux-gcc/dep1/src/: hello.cpp  hello.hpp
1-Compiling-in-Linux-gcc/myapp/: CMakeLists.txt
1-Compiling-in-Linux-gcc/myapp/src/: main.cpp
